--- a/springboot-backend/src/main/resources/application-dev.properties
+++ b/springboot-backend/src/main/resources/application-dev.properties
@@ -1,17 +1,14 @@
-# DATASOURCE
+spring.profiles.active=dev
+
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=un
 spring.datasource.password=
 
-# H2 CLIENT
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA, SQL
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true	
+spring.jpa.hibernate.ddl-auto=update
 
 cors.allowed-origins=http://localhost:5173
