--- a/springboot-backend/src/main/resources/application-dev.properties
+++ b/springboot-backend/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/financial-manager-db
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 jwt.secret=MYJWTSECRET
 jwt.expiration=3600000
 
-cors.allowed-origins=http://localhost:3000
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
+frontend.url=${FRONTEND_URL}
